--- a/src/main/resources/ku/cs/style/style.css
+++ b/src/main/resources/ku/cs/style/style.css
@@ -17,5 +17,5 @@
     -fx-background-color: linear-gradient(#FEEBD3, #FFF1DE);
 }
 .backgroundColor3{
-    -fx-background-color: linear-gradient(#FFF1DE, #FFFFFF);
+    -fx-background-color: linear-gradient(#FFE0B8, #FFF1DE);
 }
