--- a/src/main/resources/ku/cs/editPasswordDetail.fxml
+++ b/src/main/resources/ku/cs/editPasswordDetail.fxml
@@ -24,21 +24,22 @@
             <top>
                 <HBox fx:id="hBoxSellerStock" prefHeight="69.0" prefWidth="1024.0" BorderPane.alignment="CENTER">
                <children>
-                  <ImageView fitHeight="68.0" fitWidth="69.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@image/javapai.png" />
-                     </image>
-                     <HBox.margin>
-                        <Insets left="10.0" />
-                     </HBox.margin>
-                  </ImageView>
-                  <MenuButton mnemonicParsing="false" onAction="#handleTypeBookButton" prefHeight="38.0" prefWidth="136.0" style="-fx-background-color: #c9ad88; -fx-background-radius: 20;" text="ประเภท" textFill="WHITE">
+                  <Button mnemonicParsing="false" onAction="#handleToHomeButton" style="-fx-background-color: white;">
+                     <graphic>
+                        <ImageView fitHeight="68.0" fitWidth="69.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@image/javapai.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </Button>
+                  <MenuButton mnemonicParsing="false" prefHeight="38.0" prefWidth="136.0" style="-fx-background-color: #c9ad88; -fx-background-radius: 20;" text="ประเภท" textFill="WHITE">
                      <items>
-                        <MenuItem mnemonicParsing="false" onAction="#handleTypeBookButton" text="หนังสือการ์ตูน" />
-                        <MenuItem mnemonicParsing="false" onAction="#handleTypeBookButton" text="นิตยสาร" />
-                        <MenuItem mnemonicParsing="false" onAction="#handleTypeBookButton" text="นิยาย" />
-                        <MenuItem mnemonicParsing="false" onAction="#handleTypeBookButton" text="หนังสือเรียน" />
-                        <MenuItem mnemonicParsing="false" onAction="#handleTypeBookButton" text="e-book" />
+                        <MenuItem mnemonicParsing="false" onAction="#handleCartoonBookButton" text="หนังสือการ์ตูน" />
+                        <MenuItem mnemonicParsing="false" onAction="#handleMagazineBookButton" text="นิตยสาร" />
+                        <MenuItem mnemonicParsing="false" onAction="#handleNovelBookButton" text="นิยาย" />
+                        <MenuItem mnemonicParsing="false" onAction="#handleEducationalBookButton" text="หนังสือเรียน" />
+                        <MenuItem mnemonicParsing="false" onAction="#handleEBookButton" text="e-book" />
                      </items>
                      <font>
                         <Font name="JasmineUPC" size="25.0" />
@@ -55,17 +56,10 @@
                         <Insets left="30.0" right="-20.0" top="13.0" />
                      </HBox.margin>
                   </Button>
-                  <Button mnemonicParsing="false" onAction="#handleToInformationButton" prefHeight="38.0" prefWidth="119.0" style="-fx-background-color: F99F28; -fx-background-radius: 20;">
+                  <Button mnemonicParsing="false" prefHeight="38.0" prefWidth="119.0" style="-fx-background-color: F99F28; -fx-background-radius: 20;" text="ข้อมูลผู้ใช้" textFill="WHITE">
                      <font>
-                        <Font size="15.0" />
+                        <Font name="JasmineUPC" size="25.0" />
                      </font>
-                     <graphic>
-                        <Label fx:id="usernameLabel1" alignment="CENTER" prefHeight="27.0" prefWidth="72.0" style="-fx-background-radius: 20;" styleClass="font_jasmine_16pt" stylesheets="@style/PrimaryTheme.css" text="ข้อมูลผู้ใช้" textAlignment="CENTER" textFill="WHITE" textOverrun="CLIP" wrapText="true">
-                           <font>
-                              <Font name="JasmineUPC" size="36.0" />
-                           </font>
-                        </Label>
-                     </graphic>
                      <opaqueInsets>
                         <Insets />
                      </opaqueInsets>
