show detail user

--- a/src/main/resources/ku/cs/editPasswordDetail.fxml
+++ b/src/main/resources/ku/cs/editPasswordDetail.fxml
@@ -118,7 +118,7 @@
                                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                             </rowConstraints>
                             <children>
-                                <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                                <ImageView fx:id="img" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
                                     <image>
                                         <Image url="@image/Icon01.png" />
                                     </image>
