--- a/src/main/resources/ku/cs/basket.fxml
+++ b/src/main/resources/ku/cs/basket.fxml
@@ -178,7 +178,7 @@
                         <Insets top="20.0" />
                      </VBox.margin>
                      <content>
-                        <GridPane fx:id="gridInBasket" prefHeight="566.0" prefWidth="696.0">
+                        <GridPane fx:id="gridInBasket" prefHeight="566.0" prefWidth="696.0" style="-fx-background-color: white;">
                           <columnConstraints>
                             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                           </columnConstraints>
