--- a/src/main/resources/ku/cs/applyToBeASeller.fxml
+++ b/src/main/resources/ku/cs/applyToBeASeller.fxml
@@ -3,8 +3,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -33,47 +31,47 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                  <MenuButton mnemonicParsing="false" onAction="#handleTypeBookButton" prefHeight="38.0" prefWidth="136.0" style="-fx-background-color: #c9ad88; -fx-background-radius: 20;" text="ประเภท" textFill="WHITE">
-                     <items>
-                        <MenuItem mnemonicParsing="false" onAction="#handleTypeBookButton" text="หนังสือการ์ตูน" />
-                        <MenuItem mnemonicParsing="false" onAction="#handleTypeBookButton" text="นิตยสาร" />
-                        <MenuItem mnemonicParsing="false" onAction="#handleTypeBookButton" text="นิยาย" />
-                        <MenuItem mnemonicParsing="false" onAction="#handleTypeBookButton" text="หนังสือเรียน" />
-                        <MenuItem mnemonicParsing="false" onAction="#handleTypeBookButton" text="e-book" />
-                     </items>
-                     <font>
-                        <Font name="JasmineUPC" size="25.0" />
-                     </font>
-                     <HBox.margin>
-                        <Insets left="40.0" top="13.0" />
-                     </HBox.margin>
-                  </MenuButton>
-                  <Button mnemonicParsing="false" onAction="#handleAllTypeBookButton" prefHeight="38.0" prefWidth="165.0" style="-fx-background-color: #c9ad88; -fx-background-radius: 20;" text="หนังสือทั้งหมด" textFill="WHITE">
-                     <font>
-                        <Font name="JasmineUPC" size="25.0" />
-                     </font>
-                     <HBox.margin>
-                        <Insets left="30.0" right="-20.0" top="13.0" />
-                     </HBox.margin>
-                  </Button>
-                  <Button mnemonicParsing="false" onAction="#handleToInformationButton" prefHeight="38.0" prefWidth="119.0" style="-fx-background-color: F99F28; -fx-background-radius: 20;">
-                     <font>
-                        <Font size="15.0" />
-                     </font>
-                     <graphic>
-                        <Label fx:id="usernameLabel" alignment="CENTER" prefHeight="27.0" prefWidth="72.0" style="-fx-background-radius: 20;" styleClass="font_jasmine_16pt" stylesheets="@style/PrimaryTheme.css" text="ข้อมูลผู้ใช้" textAlignment="CENTER" textFill="WHITE" textOverrun="CLIP" wrapText="true">
-                           <font>
-                              <Font name="JasmineUPC" size="36.0" />
-                           </font>
-                        </Label>
-                     </graphic>
-                     <opaqueInsets>
-                        <Insets />
-                     </opaqueInsets>
-                     <HBox.margin>
-                        <Insets left="55.0" right="40.0" top="13.0" />
-                     </HBox.margin>
-                  </Button>
+<!--                  <MenuButton mnemonicParsing="false" onAction="#handleTypeBookButton" prefHeight="38.0" prefWidth="136.0" style="-fx-background-color: #c9ad88; -fx-background-radius: 20;" text="ประเภท" textFill="WHITE">-->
+<!--                     <items>-->
+<!--                        <MenuItem mnemonicParsing="false" onAction="#handleTypeBookButton" text="หนังสือการ์ตูน" />-->
+<!--                        <MenuItem mnemonicParsing="false" onAction="#handleTypeBookButton" text="นิตยสาร" />-->
+<!--                        <MenuItem mnemonicParsing="false" onAction="#handleTypeBookButton" text="นิยาย" />-->
+<!--                        <MenuItem mnemonicParsing="false" onAction="#handleTypeBookButton" text="หนังสือเรียน" />-->
+<!--                        <MenuItem mnemonicParsing="false" onAction="#handleTypeBookButton" text="e-book" />-->
+<!--                     </items>-->
+<!--                     <font>-->
+<!--                        <Font name="JasmineUPC" size="25.0" />-->
+<!--                     </font>-->
+<!--                     <HBox.margin>-->
+<!--                        <Insets left="40.0" top="13.0" />-->
+<!--                     </HBox.margin>-->
+<!--                  </MenuButton>-->
+<!--                  <Button mnemonicParsing="false" onAction="#handleAllTypeBookButton" prefHeight="38.0" prefWidth="165.0" style="-fx-background-color: #c9ad88; -fx-background-radius: 20;" text="หนังสือทั้งหมด" textFill="WHITE">-->
+<!--                     <font>-->
+<!--                        <Font name="JasmineUPC" size="25.0" />-->
+<!--                     </font>-->
+<!--                     <HBox.margin>-->
+<!--                        <Insets left="30.0" right="-20.0" top="13.0" />-->
+<!--                     </HBox.margin>-->
+<!--                  </Button>-->
+<!--                  <Button mnemonicParsing="false" onAction="#handleToInformationButton" prefHeight="38.0" prefWidth="119.0" style="-fx-background-color: F99F28; -fx-background-radius: 20;">-->
+<!--                     <font>-->
+<!--                        <Font size="15.0" />-->
+<!--                     </font>-->
+<!--                     <graphic>-->
+<!--                        <Label fx:id="usernameLabel" alignment="CENTER" prefHeight="27.0" prefWidth="72.0" style="-fx-background-radius: 20;" styleClass="font_jasmine_16pt" stylesheets="@style/PrimaryTheme.css" text="ข้อมูลผู้ใช้" textAlignment="CENTER" textFill="WHITE" textOverrun="CLIP" wrapText="true">-->
+<!--                           <font>-->
+<!--                              <Font name="JasmineUPC" size="36.0" />-->
+<!--                           </font>-->
+<!--                        </Label>-->
+<!--                     </graphic>-->
+<!--                     <opaqueInsets>-->
+<!--                        <Insets />-->
+<!--                     </opaqueInsets>-->
+<!--                     <HBox.margin>-->
+<!--                        <Insets left="55.0" right="40.0" top="13.0" />-->
+<!--                     </HBox.margin>-->
+<!--                  </Button>-->
                   <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" style="-fx-background-color: white;">
                      <graphic>
                         <ImageView fitHeight="38.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
@@ -175,6 +173,10 @@
             <Font name="JasmineUPC" size="40.0" />
          </font>
       </Label>
+      <Label fx:id="notificationShopName" layoutX="390.0" layoutY="315.0" textFill="#f70505">
+         <font>
+            <Font name="JasmineUPC" size="18.0" />
+         </font></Label>
 
       <Line endX="500.666748046875" endY="1.52587890625E-5" layoutX="450.0" layoutY="161.0" startX="-100.0" stroke="#7e4811" />
 
@@ -196,22 +198,26 @@
          </font>
       </Label>
 
-      <TextField fx:id="nameShopTextField" layoutX="380.0" layoutY="270.0" prefHeight="40.0" prefWidth="550.0" promptText="ชื่อร้านค้าของคุน" style="-fx-background-color: FFFCF1; -fx-effect: shadow; -fx-background-radius: 10;">
+      <TextField fx:id="nameShopTextField" layoutX="380.0" layoutY="270.0" onAction="#handleKeyCheckShopName" prefHeight="40.0" prefWidth="550.0" promptText="ชื่อร้านค้าของคุน" style="-fx-background-color: FFFCF1; -fx-effect: shadow; -fx-background-radius: 10;">
          <font>
             <Font name="JasmineUPC" size="18.0" />
          </font>
       </TextField>
-      <PasswordField layoutX="380.0" layoutY="440.0" prefHeight="40.0" prefWidth="550.0" promptText="password" style="-fx-background-color: FFFCF1; -fx-effect: shadow; -fx-background-radius: 10;" />
+      <PasswordField fx:id="passwordTextField1" layoutX="380.0" layoutY="440.0" onAction="#handleKeyCheckPassword" prefHeight="40.0" prefWidth="550.0" promptText="password" style="-fx-background-color: FFFCF1; -fx-effect: shadow; -fx-background-radius: 10;" />
       <Label layoutX="380.0" layoutY="420.0" text="* กรุณากรอกรหัสผ่านเพื่อยืนยัน" textFill="#fc0202">
          <font>
             <Font name="JasmineUPC" size="18.0" />
          </font>
       </Label>
-      <PasswordField layoutX="380.0" layoutY="520.0" prefHeight="40.0" prefWidth="550.0" promptText="password" style="-fx-background-color: FFFCF1; -fx-effect: shadow; -fx-background-radius: 10;" />
+      <PasswordField fx:id="passwordTextField2" layoutX="380.0" layoutY="520.0" prefHeight="40.0" prefWidth="550.0" promptText="password" style="-fx-background-color: FFFCF1; -fx-effect: shadow; -fx-background-radius: 10;" />
       <Label layoutX="380.0" layoutY="500.0" text="* กรุณากรอกรหัสผ่านเพื่อยืนยันอีกครั้ง" textFill="#fc0202">
          <font>
             <Font name="JasmineUPC" size="18.0" />
          </font>
       </Label>
+      <Label fx:id="notificationPassword" layoutX="390.0" layoutY="570.0" textFill="#f40606">
+         <font>
+            <Font name="JasmineUPC" size="18.0" />
+         </font></Label>
    </children>
 </AnchorPane>
